refactor(RenameProvider): устранить замечания Sonar (типы лямбд, toList, method-ref)
S2211 — явные типы параметров лямбд; S6204 — Stream.toList(); S1612 — method reference в тестах.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>